--- a/public/chatonline.html
+++ b/public/chatonline.html
@@ -3,265 +3,166 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Administração do Chat Online</title>
+    <title>Chat Online Cabana</title>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
     <style>
         body {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
             background-color: #f0f0f0;
         }
-        .admin-container {
-            display: flex;
-            max-width: 1200px;
-            margin: 20px auto;
-            background-color: #fff;
-            border-radius: 8px;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+        #chat-container {
+            width: 300px;
+            height: 400px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
             overflow: hidden;
-        }
-        .chat-list {
-            width: 30%;
-            border-right: 1px solid #ddd;
-            overflow-y: auto;
-            max-height: 600px;
-        }
-        .chat-item {
-            padding: 15px;
-            border-bottom: 1px solid #ddd;
-            cursor: pointer;
-        }
-        .chat-item:hover {
-            background-color: #f5f5f5;
-        }
-        .chat-window {
-            width: 70%;
             display: flex;
             flex-direction: column;
+            background-color: white;
         }
-        .chat-header {
-            background-color: #4CAF50;
-            color: white;
-            padding: 15px;
-            text-align: center;
-            font-size: 18px;
-        }
-        .chat-messages {
-            height: 400px;
+        #chat-messages {
+            flex-grow: 1;
             overflow-y: auto;
-            padding: 15px;
-        }
-        .message {
-            margin-bottom: 10px;
             padding: 10px;
-            border-radius: 5px;
-            max-width: 70%;
         }
-        .received {
-            background-color: #f1f0f0;
-            float: left;
-            clear: both;
-        }
-        .sent {
-            background-color: #dcf8c6;
-            float: right;
-            clear: both;
-        }
-        .chat-input {
+        #chat-form {
             display: flex;
-            padding: 15px;
-            border-top: 1px solid #ddd;
+            padding: 10px;
+            border-top: 1px solid #ccc;
         }
         #message-input {
             flex-grow: 1;
-            padding: 10px;
-            border: 1px solid #ddd;
-            border-radius: 4px;
+            border: 1px solid #ccc;
+            border-radius: 3px;
+            padding: 5px;
         }
         #send-button {
-            padding: 10px 20px;
+            margin-left: 10px;
             background-color: #4CAF50;
             color: white;
             border: none;
-            border-radius: 4px;
-            margin-left: 10px;
+            padding: 5px 10px;
+            border-radius: 3px;
             cursor: pointer;
+        }
+        #online-users {
+            padding: 10px;
+            border-bottom: 1px solid #ccc;
+            font-weight: bold;
         }
     </style>
 </head>
 <body>
-    <div class="admin-container">
-        <div class="chat-list" id="chat-list">
-            <!-- Lista de chats será preenchida dinamicamente -->
-        </div>
-        <div class="chat-window">
-            <div class="chat-header" id="chat-header">
-                Administração do Chat Online
-            </div>
-            <div class="chat-messages" id="chat-messages">
-                <!-- As mensagens serão inseridas aqui dinamicamente -->
-            </div>
-            <div class="chat-input">
-                <input type="text" id="message-input" placeholder="Digite sua mensagem...">
-                <button id="send-button">Enviar</button>
-            </div>
-        </div>
+    <div id="chat-container">
+        <div id="online-users">Usuários online: 0</div>
+        <div id="chat-messages"></div>
+        <form id="chat-form">
+            <input type="text" id="message-input" placeholder="Digite sua mensagem...">
+            <button type="submit" id="send-button">Enviar</button>
+        </form>
     </div>
 
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
     <script>
         // Configuração do Firebase
         const firebaseConfig = {
-  apiKey: "AIzaSyB-pF2lRStLTN9Xw9aYQj962qdNFyUXI2E",
-  authDomain: "cabana-8d55e.firebaseapp.com",
-  databaseURL: "https://cabana-8d55e-default-rtdb.firebaseio.com",
-  projectId: "cabana-8d55e",
-  storageBucket: "cabana-8d55e.appspot.com",
-  messagingSenderId: "706144237954",
-  appId: "1:706144237954:web:345c10370972486afc779b",
-  measurementId: "G-96Y337GYT8"            
-            // Insira sua configuração do Firebase aqui
+            apiKey: "AIzaSyB-pF2lRStLTN9Xw9aYQj962qdNFyUXI2E",
+            authDomain: "cabana-8d55e.firebaseapp.com",
+            databaseURL: "https://cabana-8d55e-default-rtdb.firebaseio.com",
+            projectId: "cabana-8d55e",
+            storageBucket: "cabana-8d55e.appspot.com",
+            messagingSenderId: "706144237954",
+            appId: "1:706144237954:web:345c10370972486afc779b",
+            measurementId: "G-96Y337GYT8"
         };
         firebase.initializeApp(firebaseConfig);
+
         const database = firebase.database();
-
-        const chatList = document.getElementById('chat-list');
         const chatMessages = document.getElementById('chat-messages');
+        const chatForm = document.getElementById('chat-form');
         const messageInput = document.getElementById('message-input');
-        const sendButton = document.getElementById('send-button');
-        const chatHeader = document.getElementById('chat-header');
+        const onlineUsersElement = document.getElementById('online-users');
 
-        let currentChat = null;
+        // Gerar um ID único para o usuário
+        const userId = 'user_' + Math.random().toString(36).substr(2, 9);
 
-        // Função para enviar mensagem
-        function sendMessage() {
+        // Função para adicionar mensagem ao chat
+        function addMessageToChat(message) {
+            const messageElement = document.createElement('div');
+            messageElement.textContent = message;
+            chatMessages.appendChild(messageElement);
+            chatMessages.scrollTop = chatMessages.scrollHeight;
+        }
+
+        // Listener para novas mensagens no Firebase
+        database.ref('messages').on('child_added', (snapshot) => {
+            const message = snapshot.val();
+            addMessageToChat(message);
+        });
+
+        // Enviar mensagem
+        chatForm.addEventListener('submit', (e) => {
+            e.preventDefault();
             const message = messageInput.value.trim();
-            if (message && currentChat) {
-                database.ref('messages').push({
-                    text: message,
-                    timestamp: Date.now(),
-                    sender: 'admin',
-                    chatId: currentChat
-                });
+            if (message) {
+                database.ref('messages').push(message);
                 messageInput.value = '';
             }
-        }
+        });
 
-        // Evento de clique no botão enviar
-        sendButton.addEventListener('click', sendMessage);
+        // Atualizar status online
+        const userStatusDatabaseRef = database.ref('/status/' + userId);
+        const isOfflineForDatabase = {
+            state: 'offline',
+            last_changed: firebase.database.ServerValue.TIMESTAMP,
+        };
+        const isOnlineForDatabase = {
+            state: 'online',
+            last_changed: firebase.database.ServerValue.TIMESTAMP,
+        };
 
-        // Evento de pressionar Enter no campo de mensagem
-        messageInput.addEventListener('keypress', function(event) {
-            if (event.key === 'Enter') {
-                sendMessage();
+        database.ref('.info/connected').on('value', function(snapshot) {
+            if (snapshot.val() == false) {
+                return;
+            };
+
+            userStatusDatabaseRef.onDisconnect().set(isOfflineForDatabase).then(function() {
+                userStatusDatabaseRef.set(isOnlineForDatabase);
+            });
+        });
+
+        // Contar usuários online
+        const connectedRef = database.ref('.info/connected');
+        const onlineUsersRef = database.ref('status');
+
+        connectedRef.on('value', (snap) => {
+            if (snap.val() === true) {
+                onlineUsersRef.once('value').then((snapshot) => {
+                    const count = snapshot.numChildren();
+                    onlineUsersElement.textContent = `Usuários online: ${count}`;
+                });
             }
         });
 
-        // Ouvir por novas mensagens
-        database.ref('messages').on('child_added', function(snapshot) {
-            const message = snapshot.val();
-            if (message.chatId === currentChat) {
-                const messageElement = document.createElement('div');
-                messageElement.classList.add('message');
-                messageElement.classList.add(message.sender === 'admin' ? 'sent' : 'received');
-                messageElement.textContent = message.text;
-                chatMessages.appendChild(messageElement);
-                chatMessages.scrollTop = chatMessages.scrollHeight;
-            }
-
-            // Atualizar lista de chats
-            updateChatList();
-
-            // Notificação de desktop
-            if (message.sender !== 'admin') {
-                showNotification("Nova mensagem", message.text);
-            }
+        onlineUsersRef.on('child_added', (snapshot) => {
+            onlineUsersRef.once('value').then((snapshot) => {
+                const count = snapshot.numChildren();
+                onlineUsersElement.textContent = `Usuários online: ${count}`;
+            });
         });
 
-        // Função para mostrar notificação
-        function showNotification(title, body) {
-            if (!("Notification" in window)) {
-                alert("Este navegador não suporta notificações de desktop");
-            } else if (Notification.permission === "granted") {
-                const notification = new Notification(title, { 
-                    body: body,
-                    icon: 'https://exemplo.com/icone.png' // Substitua pelo URL do seu ícone
-                });
-                notification.onclick = function(event) {
-                    event.preventDefault();
-                    window.focus();
-                    notification.close();
-                }
-            } else if (Notification.permission !== 'denied') {
-                Notification.requestPermission().then(function (permission) {
-                    if (permission === "granted") {
-                        showNotification(title, body);
-                    }
-                });
-            }
-        }
-
-        // Função para atualizar a lista de chats
-        function updateChatList() {
-            database.ref('messages').once('value', function(snapshot) {
-                const messages = snapshot.val();
-                const chats = {};
-
-                for (let key in messages) {
-                    const message = messages[key];
-                    const chatId = message.name || message.chatId;
-                    if (!chats[chatId]) {
-                        chats[chatId] = {
-                            lastMessage: message.text,
-                            timestamp: message.timestamp,
-                            name: message.name
-                        };
-                    } else if (message.timestamp > chats[chatId].timestamp) {
-                        chats[chatId].lastMessage = message.text;
-                        chats[chatId].timestamp = message.timestamp;
-                    }
-                }
-
-                chatList.innerHTML = '';
-                for (let chatId in chats) {
-                    const chatItem = document.createElement('div');
-                    chatItem.classList.add('chat-item');
-                    chatItem.textContent = `${chats[chatId].name || 'Chat ' + chatId}: ${chats[chatId].lastMessage}`;
-                    chatItem.addEventListener('click', function() {
-                        currentChat = chatId;
-                        loadMessages(chatId);
-                        chatHeader.textContent = `Chat com ${chats[chatId].name || chatId}`;
-                    });
-                    chatList.appendChild(chatItem);
-                }
+        onlineUsersRef.on('child_removed', (snapshot) => {
+            onlineUsersRef.once('value').then((snapshot) => {
+                const count = snapshot.numChildren();
+                onlineUsersElement.textContent = `Usuários online: ${count}`;
             });
-        }
-
-        // Função para carregar mensagens de um chat específico
-        function loadMessages(chatId) {
-            chatMessages.innerHTML = '';
-            database.ref('messages').orderByChild('chatId').equalTo(chatId).once('value', function(snapshot) {
-                const messages = snapshot.val();
-                for (let key in messages) {
-                    const message = messages[key];
-                    const messageElement = document.createElement('div');
-                    messageElement.classList.add('message');
-                    messageElement.classList.add(message.sender === 'admin' ? 'sent' : 'received');
-                    messageElement.textContent = message.text;
-                    chatMessages.appendChild(messageElement);
-                }
-                chatMessages.scrollTop = chatMessages.scrollHeight;
-            });
-        }
-
-        // Solicitar permissão para notificações de desktop
-        if (Notification.permission !== "granted") {
-            Notification.requestPermission();
-        }
-
-        // Inicializar a lista de chats
-        updateChatList();
+        });
     </script>
 </body>
 </html>
