--- a/public/chat.html
+++ b/public/chat.html
@@ -10,75 +10,142 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f0f2f5;
+            color: #1c1e21;
+        }
+        .container {
             max-width: 800px;
             margin: 0 auto;
             padding: 20px;
         }
+        .chat-container {
+            background-color: #fff;
+            border-radius: 8px;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+            overflow: hidden;
+        }
+        .chat-header {
+            background-color: #4267B2;
+            color: white;
+            padding: 15px;
+            font-size: 18px;
+            font-weight: bold;
+        }
         #messages {
-            height: 300px;
-            border: 1px solid #ccc;
-            overflow-y: scroll;
-            margin-bottom: 10px;
-            padding: 10px;
-        }
-        #messageForm {
-            display: flex;
-            margin-bottom: 10px;
-        }
-        #messageInput {
-            flex-grow: 1;
-            margin-right: 10px;
+            height: 400px;
+            overflow-y: auto;
+            padding: 15px;
         }
         .message {
-            margin-bottom: 10px;
+            margin-bottom: 15px;
+            display: flex;
+            flex-direction: column;
         }
         .message .sender {
             font-weight: bold;
+            margin-bottom: 5px;
+        }
+        .message .text {
+            background-color: #e9ebee;
+            padding: 10px;
+            border-radius: 18px;
+            max-width: 70%;
+            align-self: flex-start;
+        }
+        .message.own .text {
+            background-color: #0084ff;
+            color: white;
+            align-self: flex-end;
         }
         .message .timestamp {
             font-size: 0.8em;
-            color: #888;
+            color: #65676b;
+            margin-top: 5px;
         }
         #typingIndicator {
             font-style: italic;
-            color: #888;
+            color: #65676b;
+            padding: 5px 15px;
+        }
+        #messageForm {
+            display: flex;
+            padding: 15px;
+            border-top: 1px solid #e4e6eb;
+        }
+        #messageInput {
+            flex-grow: 1;
+            border: none;
+            padding: 10px;
+            border-radius: 20px;
+            background-color: #f0f2f5;
+            margin-right: 10px;
+        }
+        #messageInput:focus {
+            outline: none;
+            box-shadow: 0 0 0 2px #e7f3ff;
+        }
+        button {
+            background-color: #0084ff;
+            color: white;
+            border: none;
+            padding: 10px 20px;
+            border-radius: 20px;
+            cursor: pointer;
+            transition: background-color 0.3s;
+        }
+        button:hover {
+            background-color: #0073e6;
         }
         #fileInput {
             display: none;
         }
         #fileLabel {
             cursor: pointer;
-            padding: 5px 10px;
-            background-color: #f0f0f0;
-            border: 1px solid #ccc;
-            border-radius: 3px;
+            padding: 10px;
+            background-color: #f0f2f5;
+            border-radius: 50%;
+            margin-right: 10px;
         }
         .emoji-picker {
             margin-top: 10px;
+            display: flex;
+            justify-content: center;
         }
         .emoji {
             cursor: pointer;
-            font-size: 1.2em;
-            margin-right: 5px;
+            font-size: 1.5em;
+            margin: 0 5px;
+            transition: transform 0.2s;
+        }
+        .emoji:hover {
+            transform: scale(1.2);
         }
     </style>
 </head>
 <body>
-    <h1>Chat do Motoboy</h1>
-    <div id="messages"></div>
-    <div id="typingIndicator"></div>
-    <form id="messageForm">
-        <input type="text" id="messageInput" placeholder="Digite sua mensagem" required>
-        <label for="fileInput" id="fileLabel">📎</label>
-        <input type="file" id="fileInput" accept="image/*">
-        <button type="submit">Enviar</button>
-    </form>
-    <div class="emoji-picker">
-        <span class="emoji" onclick="addEmoji('😊')">😊</span>
-        <span class="emoji" onclick="addEmoji('👍')">👍</span>
-        <span class="emoji" onclick="addEmoji('🚚')">🚚</span>
-        <span class="emoji" onclick="addEmoji('🏍️')">🏍️</span>
+    <div class="container">
+        <div class="chat-container">
+            <div class="chat-header">
+                Chat do Motoboy
+            </div>
+            <div id="messages"></div>
+            <div id="typingIndicator"></div>
+            <form id="messageForm">
+                <label for="fileInput" id="fileLabel">📎</label>
+                <input type="file" id="fileInput" accept="image/*">
+                <input type="text" id="messageInput" placeholder="Digite sua mensagem" required>
+                <button type="submit">Enviar</button>
+            </form>
+        </div>
+        <div class="emoji-picker">
+            <span class="emoji" onclick="addEmoji('😊')">😊</span>
+            <span class="emoji" onclick="addEmoji('👍')">👍</span>
+            <span class="emoji" onclick="addEmoji('🚚')">🚚</span>
+            <span class="emoji" onclick="addEmoji('🏍️')">🏍️</span>
+        </div>
     </div>
 
     <script>
@@ -123,20 +190,29 @@
             db.collection('chatRooms').doc(roomId).collection('messages')
                 .orderBy('timestamp')
                 .onSnapshot((snapshot) => {
-                    messagesDiv.innerHTML = '';
-                    snapshot.forEach((doc) => {
-                        const message = doc.data();
-                        const messageElement = document.createElement('div');
-                        messageElement.className = 'message';
-                        messageElement.innerHTML = `
-                            <span class="sender">${message.sender}</span>: 
-                            ${message.text}
-                            <span class="timestamp">${new Date(message.timestamp.toDate()).toLocaleString()}</span>
-                        `;
-                        messagesDiv.appendChild(messageElement);
+                    snapshot.docChanges().forEach((change) => {
+                        if (change.type === "added") {
+                            const message = change.doc.data();
+                            displayMessage(message);
+                        }
                     });
                     messagesDiv.scrollTop = messagesDiv.scrollHeight;
                 });
+        }
+
+        // Função para exibir mensagem
+        function displayMessage(message) {
+            const messageElement = document.createElement('div');
+            messageElement.className = 'message';
+            if (message.sender === currentUser.email) {
+                messageElement.className += ' own';
+            }
+            messageElement.innerHTML = `
+                <div class="sender">${message.sender}</div>
+                <div class="text">${message.text}</div>
+                <div class="timestamp">${new Date(message.timestamp.toDate()).toLocaleString()}</div>
+            `;
+            messagesDiv.appendChild(messageElement);
         }
 
         // Enviar mensagem
@@ -209,7 +285,7 @@
                     const data = doc.data();
                     for (let key in data) {
                         if (key.endsWith('_typing') && data[key] && key !== `${currentUser.uid}_typing`) {
-                            typingIndicator.textContent = 'Alguém está digitando...';
+                            typingIndicator.textContent = 'Administrador está digitando...';
                             return;
                         }
                     }
