--- a/public/chatonline.html
+++ b/public/chatonline.html
@@ -7,71 +7,246 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
     <style>
         body {
-            font-family: Arial, sans-serif;
-            max-width: 800px;
-            margin: 0 auto;
-            padding: 20px;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f0f2f5;
+            color: #1c1e21;
+        }
+        .container {
+            display: flex;
+            height: 100vh;
+        }
+        .sidebar {
+            width: 300px;
+            background-color: #fff;
+            border-right: 1px solid #e4e6eb;
+            overflow-y: auto;
+        }
+        .chat-list {
+            list-style-type: none;
+            padding: 0;
+            margin: 0;
+        }
+        .chat-item {
+            padding: 15px;
+            border-bottom: 1px solid #e4e6eb;
+            cursor: pointer;
+            transition: background-color 0.3s;
+        }
+        .chat-item:hover {
+            background-color: #f0f2f5;
+        }
+        .chat-item.active {
+            background-color: #e7f3ff;
+        }
+        .chat-container {
+            flex-grow: 1;
+            display: flex;
+            flex-direction: column;
+        }
+        .chat-header {
+            background-color: #4267B2;
+            color: white;
+            padding: 15px;
+            font-size: 18px;
+            font-weight: bold;
         }
         #messages {
-            height: 300px;
-            border: 1px solid #ccc;
-            overflow-y: scroll;
-            margin-bottom: 10px;
+            flex-grow: 1;
+            overflow-y: auto;
+            padding: 15px;
+        }
+        .message {
+            margin-bottom: 15px;
+            display: flex;
+            flex-direction: column;
+        }
+        .message .sender {
+            font-weight: bold;
+            margin-bottom: 5px;
+        }
+        .message .text {
+            background-color: #e9ebee;
             padding: 10px;
+            border-radius: 18px;
+            max-width: 70%;
+            align-self: flex-start;
+        }
+        .message.own .text {
+            background-color: #0084ff;
+            color: white;
+            align-self: flex-end;
+        }
+        .message .timestamp {
+            font-size: 0.8em;
+            color: #65676b;
+            margin-top: 5px;
+        }
+        #typingIndicator {
+            font-style: italic;
+            color: #65676b;
+            padding: 5px 15px;
         }
         #messageForm {
             display: flex;
+            padding: 15px;
+            border-top: 1px solid #e4e6eb;
         }
         #messageInput {
             flex-grow: 1;
+            border: none;
+            padding: 10px;
+            border-radius: 20px;
+            background-color: #f0f2f5;
             margin-right: 10px;
+        }
+        #messageInput:focus {
+            outline: none;
+            box-shadow: 0 0 0 2px #e7f3ff;
+        }
+        button {
+            background-color: #0084ff;
+            color: white;
+            border: none;
+            padding: 10px 20px;
+            border-radius: 20px;
+            cursor: pointer;
+            transition: background-color 0.3s;
+        }
+        button:hover {
+            background-color: #0073e6;
+        }
+        #fileInput {
+            display: none;
+        }
+        #fileLabel {
+            cursor: pointer;
+            padding: 10px;
+            background-color: #f0f2f5;
+            border-radius: 50%;
+            margin-right: 10px;
+        }
+        .emoji-picker {
+            margin-top: 10px;
+            display: flex;
+            justify-content: center;
+        }
+        .emoji {
+            cursor: pointer;
+            font-size: 1.5em;
+            margin: 0 5px;
+            transition: transform 0.2s;
+        }
+        .emoji:hover {
+            transform: scale(1.2);
         }
     </style>
 </head>
 <body>
-    <h1>Chat do Administrador</h1>
-    <div id="messages"></div>
-    <form id="messageForm">
-        <input type="text" id="messageInput" placeholder="Digite sua mensagem" required>
-        <button type="submit">Enviar</button>
-    </form>
+    <div class="container">
+        <div class="sidebar">
+            <ul id="chatList" class="chat-list"></ul>
+        </div>
+        <div class="chat-container">
+            <div class="chat-header">
+                Chat do Administrador
+            </div>
+            <div id="messages"></div>
+            <div id="typingIndicator"></div>
+            <form id="messageForm">
+                <label for="fileInput" id="fileLabel">📎</label>
+                <input type="file" id="fileInput" accept="image/*">
+                <input type="text" id="messageInput" placeholder="Digite sua mensagem" required>
+                <button type="submit">Enviar</button>
+            </form>
+            <div class="emoji-picker">
+                <span class="emoji" onclick="addEmoji('😊')">😊</span>
+                <span class="emoji" onclick="addEmoji('👍')">👍</span>
+                <span class="emoji" onclick="addEmoji('🚚')">🚚</span>
+                <span class="emoji" onclick="addEmoji('🏍️')">🏍️</span>
+            </div>
+        </div>
+    </div>
 
     <script>
-        // Configuração do Firebase (substitua com suas próprias credenciais)
+        // Configuração do Firebase
         const firebaseConfig = {
-  apiKey: "AIzaSyB-pF2lRStLTN9Xw9aYQj962qdNFyUXI2E",
-  authDomain: "cabana-8d55e.firebaseapp.com",
-  databaseURL: "https://cabana-8d55e-default-rtdb.firebaseio.com",
-  projectId: "cabana-8d55e",
-  storageBucket: "cabana-8d55e.appspot.com",
-  messagingSenderId: "706144237954",
-  appId: "1:706144237954:web:345c10370972486afc779b",
-  measurementId: "G-96Y337GYT8"
+            apiKey: "AIzaSyB-pF2lRStLTN9Xw9aYQj962qdNFyUXI2E",
+            authDomain: "cabana-8d55e.firebaseapp.com",
+            databaseURL: "https://cabana-8d55e-default-rtdb.firebaseio.com",
+            projectId: "cabana-8d55e",
+            storageBucket: "cabana-8d55e.appspot.com",
+            messagingSenderId: "706144237954",
+            appId: "1:706144237954:web:345c10370972486afc779b",
+            measurementId: "G-96Y337GYT8"
         };
 
         // Inicializa o Firebase
         firebase.initializeApp(firebaseConfig);
         const db = firebase.firestore();
         const auth = firebase.auth();
+        const storage = firebase.storage();
 
+        const chatList = document.getElementById('chatList');
         const messagesDiv = document.getElementById('messages');
         const messageForm = document.getElementById('messageForm');
         const messageInput = document.getElementById('messageInput');
+        const fileInput = document.getElementById('fileInput');
+        const typingIndicator = document.getElementById('typingIndicator');
+
+        let currentUser;
+        let currentRoomId;
+
+        // Função para carregar lista de chats
+        function loadChatList() {
+            db.collection('chatRooms').onSnapshot((snapshot) => {
+                chatList.innerHTML = '';
+                snapshot.forEach((doc) => {
+                    const chatData = doc.data();
+                    const li = document.createElement('li');
+                    li.className = 'chat-item';
+                    li.textContent = chatData.motoboyEmail;
+                    li.onclick = () => loadMessages(doc.id);
+                    chatList.appendChild(li);
+                });
+            });
+        }
 
         // Função para carregar mensagens
-        function loadMessages() {
-            db.collection('messages').orderBy('timestamp').onSnapshot((snapshot) => {
-                messagesDiv.innerHTML = '';
-                snapshot.forEach((doc) => {
-                    const message = doc.data();
-                    const messageElement = document.createElement('p');
-                    messageElement.textContent = `${message.sender}: ${message.text}`;
-                    messagesDiv.appendChild(messageElement);
+        function loadMessages(roomId) {
+            currentRoomId = roomId;
+            messagesDiv.innerHTML = '';
+            db.collection('chatRooms').doc(roomId).collection('messages')
+                .orderBy('timestamp')
+                .onSnapshot((snapshot) => {
+                    snapshot.docChanges().forEach((change) => {
+                        if (change.type === "added") {
+                            const message = change.doc.data();
+                            displayMessage(message);
+                        }
+                    });
+                    messagesDiv.scrollTop = messagesDiv.scrollHeight;
                 });
-                messagesDiv.scrollTop = messagesDiv.scrollHeight;
-            });
+            observeTypingIndicator(roomId);
+        }
+
+        // Função para exibir mensagem
+        function displayMessage(message) {
+            const messageElement = document.createElement('div');
+            messageElement.className = 'message';
+            if (message.sender === currentUser.email) {
+                messageElement.className += ' own';
+            }
+            messageElement.innerHTML = `
+                <div class="sender">${message.sender}</div>
+                <div class="text">${message.text}</div>
+                <div class="timestamp">${new Date(message.timestamp.toDate()).toLocaleString()}</div>
+            `;
+            messagesDiv.appendChild(messageElement);
         }
 
         // Enviar mensagem
@@ -80,24 +255,99 @@
             const text = messageInput.value;
             if (text.trim() === '') return;
 
-            const user = auth.currentUser;
-            if (user) {
-                db.collection('messages').add({
+            if (currentUser && currentRoomId) {
+                db.collection('chatRooms').doc(currentRoomId).collection('messages').add({
                     text: text,
-                    sender: 'Admin',
+                    sender: currentUser.email,
                     timestamp: firebase.firestore.FieldValue.serverTimestamp()
                 });
                 messageInput.value = '';
+                updateTypingStatus(false);
             }
         });
 
-        // Verificar autenticação e carregar mensagens
+        // Atualizar status do usuário
+        function updateUserStatus(userId, isOnline) {
+            return db.collection('users').doc(userId).update({
+                isOnline: isOnline,
+                lastSeen: firebase.firestore.FieldValue.serverTimestamp()
+            });
+        }
+
+        // Enviar notificação
+        function sendNotification(message) {
+            if (Notification.permission === "granted") {
+                new Notification("Nova mensagem", { body: message });
+            }
+        }
+
+        // Enviar arquivo
+        fileInput.addEventListener('change', (e) => {
+            const file = e.target.files[0];
+            const storageRef = storage.ref(`chatFiles/${file.name}`);
+            storageRef.put(file).then((snapshot) => {
+                snapshot.ref.getDownloadURL().then((url) => {
+                    db.collection('chatRooms').doc(currentRoomId).collection('messages').add({
+                        text: `<img src="${url}" alt="Imagem enviada" style="max-width: 200px;">`,
+                        sender: currentUser.email,
+                        timestamp: firebase.firestore.FieldValue.serverTimestamp()
+                    });
+                });
+            });
+        });
+
+        // Indicador de digitação
+        let typingTimer;
+        messageInput.addEventListener('input', () => {
+            clearTimeout(typingTimer);
+            updateTypingStatus(true);
+            typingTimer = setTimeout(() => updateTypingStatus(false), 2000);
+        });
+
+        function updateTypingStatus(isTyping) {
+            if (currentUser && currentRoomId) {
+                db.collection('chatRooms').doc(currentRoomId).update({
+                    [`${currentUser.uid}_typing`]: isTyping
+                });
+            }
+        }
+
+        // Observar indicador de digitação
+        function observeTypingIndicator(roomId) {
+            db.collection('chatRooms').doc(roomId)
+                .onSnapshot((doc) => {
+                    const data = doc.data();
+                    for (let key in data) {
+                        if (key.endsWith('_typing') && data[key] && key !== `${currentUser.uid}_typing`) {
+                            typingIndicator.textContent = 'Motoboy está digitando...';
+                            return;
+                        }
+                    }
+                    typingIndicator.textContent = '';
+                });
+        }
+
+        // Adicionar emoji
+        function addEmoji(emoji) {
+            messageInput.value += emoji;
+        }
+
+        // Verificar autenticação e carregar chats
         auth.onAuthStateChanged((user) => {
             if (user) {
-                loadMessages();
+                currentUser = user;
+                updateUserStatus(user.uid, true);
+                loadChatList();
             } else {
                 console.log('Usuário não autenticado');
                 // Redirecionar para página de login ou mostrar mensagem de erro
+            }
+        });
+
+        // Limpar status ao fechar a página
+        window.addEventListener('beforeunload', () => {
+            if (currentUser) {
+                updateUserStatus(currentUser.uid, false);
             }
         });
     </script>
